--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 						<image src="image/building.jpg" alt="店舗外観">
 					</div>
 					<div class="about-text">
-						<h1>私たちについて</h1>
+						<h1>私たちについて!!</h1>
 						<p>１９６３年より高品質ジュエリーを材料からこだわって制作しております。</p>
 						<p>代表紹介：奥村英則</p>
 						<p>JJA ZHO 正会員 1990年GIA ダイヤモンドグレーダー取得</p>
