--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,18 @@
         <title>奥村商店</title>
         <link rel="stylesheet" href="stylesheet.css" />
     </head>
+    <body>
+            <nav class="nav">
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="accessories.html/">アクセサリー</a></li>
+                <li><a href="about.html/">私たちについて</a></li>
+                <li><a href="contact.html/">お問い合わせ</a></li>
+            </nav>
+
+    <header>
+            <h1>お問い合わせ</h1>
+            <p class="catch">100年後も大切にしてもらえるジュエリー</p>
+    </header>
 
     <form>
         <label>お名前：</label><br>
@@ -20,3 +32,4 @@
 
         <button type="submit">送信</button>
     </form>
+
