--- a/about.html
+++ b/about.html
@@ -11,21 +11,21 @@
 	<body>
 		<nav class="nav">
 			<li><a href="index.html">ホーム</a></li>
-			<li><a href="accessories.html/">アクセサリー</a></li>
+			<li><a href="accessory.html">アクセサリー</a></li>
 			<li><a href="about.html/">私たちについて</a></li>
-			<li><a href="contact.html/">お問い合わせ</a></li>
+			<li><a href="contact.html">お問い合わせ</a></li>
 		</nav>
 
-		<header>
-			<h1>私たちについて</h1>
-			<p class="catch">100年後も大切にしてもらえるジュエリー</p>
-		</header>
-
 		<main>
+			<header>
+				<h1>私たちについて</h1>
+				<p class="catch">100年後も大切にしてもらえるジュエリー</p>
+			</header>
+
 			<section class="about">
 				<div class="about-container">
 					<div class="about-image">
-						<image src="image/building.jpg" alt="店舗外観">
+						<image src="image/gaikann.jpg" alt="店舗外観">
 					</div>
 					<div class="about-text">
 						<h1>私たちについて</h1>
