お問い合わせ

--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <body>
             <nav class="nav">
                 <li><a href="index.html">ホーム</a></li>
-                <li><a href="accessories.html/">アクセサリー</a></li>
-                <li><a href="about.html/">私たちについて</a></li>
-                <li><a href="contact.html/">お問い合わせ</a></li>
+                <li><a href="accessories.html">アクセサリー</a></li>
+                <li><a href="about.html">私たちについて</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
             </nav>
 
     <header>
