特定商取引ページページ

--- a/accessory.html
+++ b/accessory.html
@@ -15,6 +15,7 @@
             <li><a href="accessory.html">アクセサリー</a></li>
             <li><a href="about.html">私たちについて</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
+            <li><a href="legal.notice.html">特定商取引に基づく表記</a></li>
         </nav>
 
     <header>
