見やすくした

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,14 @@
             <div class="contact-map">
                 <h2>店舗へのアクセス</h2>
                 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.7448745090614!2d139.7767040745729!3d35.70789532851078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ea248189c1d%3A0x6dc9cb6efbe557a0!2z5aWl5p2R5ZWG5bqX!5e0!3m2!1sja!2sjp!4v1750314341907!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.7448745090614!2d139.7767040745729!3d35.70789532851078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ea248189c1d%3A0x6dc9cb6efbe557a0!2z5aWl5p2R5ZWG5bqX!5e0!3m2!1sja!2sjp!4v1750314341907!5m2!1sja!2sjp"
+                    width="600"
+                    height="450"
+                    style="border: 0;"
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                >
+                </iframe>
             </div>
         </div>
 
