アクセサリーページきれいにした

--- a/accessory.html
+++ b/accessory.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>奥村商店</title>
         <link rel="stylesheet" href="stylesheet.css" />
     </head>
-
     <body>
         <nav>
             <ul class="nav">
@@ -17,8 +15,12 @@
             <li><a href="contact.html">お問い合わせ</a></li>
             <li><a href="legal.notice.html">特定商取引に基づく表記</a></li>
         </nav>
-
-    <header>
-        <h1>アクセサリー</h1>
-        <p class="catch">100年後も大切にしてもらえるジュエリー</p>
-    </header>
+        <header>
+            <h1>アクセサリー</h1>
+            <p class="catch">100年後も大切にしてもらえるジュエリー</p>
+        </header>
+        <footer>
+            <p>© 2025 奥村商店</p>
+        </footer>
+    </body>
+</html>
