コンタクトと商標ページきれいになった

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,29 +14,22 @@
             <li><a href="contact.html">お問い合わせ</a></li>
             <li><a href="legal.notice.html">特定商取引に基づく表記</a></li>
         </nav>
-
         <header>
-                <h1>お問い合わせ</h1>
-                <p class="catch">100年後も大切にしてもらえるジュエリー</p>
+            <h1>お問い合わせ</h1>
+            <p class="catch">100年後も大切にしてもらえるジュエリー</p>
         </header>
-
-
         <div class="contact-container">
             <div class="contact-form">
                 <form>
-                    <label>お名前：</label><br>
-                    <input type="text" name="name"><br>
-
-                    <label>メールアドレス：</label><br>
-                    <input type="email" name="email"><br>
-
-                    <label>お問い合わせ内容：</label><br>
-                    <textarea name="message"></textarea><br>
-
+                    <label>お名前：</label>
+                    <input type="text" name="name">
+                    <label>メールアドレス：</label>
+                    <input type="email" name="email">
+                    <label>お問い合わせ内容：</label>
+                    <textarea name="message"></textarea>
                     <button type="submit">送信</button>
                 </form>
             </div>
-
             <div class="contact-map">
                 <h2>店舗へのアクセス</h2>
                 <iframe
@@ -51,9 +43,8 @@
                 </iframe>
             </div>
         </div>
-
+        <footer>
+            <p>© 2025 奥村商店</p>
+        </footer>
     </body>
-
-    <footer>
-        <p>© 2025 奥村商店</p>
-    </footer>
+</html>
