--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,6 @@
                 <h1>お問い合わせ</h1>
                 <p class="catch">100年後も大切にしてもらえるジュエリー</p>
         </header>
-
-
         <div class="contact-container">
             <div class="contact-form">
                 <form>
@@ -36,7 +34,9 @@
 
                     <button type="submit">送信</button>
                 </form>
+                <a href="https://lin.ee/あなたのLINE公式URL" target="_blank" class="line-btn">LINEで見積もり相談</a>
             </div>
+            
 
             <div class="contact-map">
             <h2>店舗へのアクセス</h2>
